--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,28 +1,35 @@
-.header{
-    display: flex;
-    padding: 0 45px;
-    justify-content: space-between;
-    align-items: center;
+.header-ctn {
+  position: absolute;
+  width: 100%;
 }
-@media screen and (min-width: 768px){
-.logo {
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 45px;
+  margin: auto;
+  max-width: 1240px;
+}
+@media screen and (min-width: 768px) {
+  .logo {
     width: 120px;
     height: 90px;
+  }
 }
+.btn {
+  font-size: 16px;
+  color: rgba(255, 255, 255, 1);
+  font-weight: 500;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 11px;
+  padding-bottom: 11px;
+  background-color: rgba(0, 0, 0, 0.6);
+  border-radius: 0.75rem;
+  height: 41px;
+  border: none;
 }
-.btn{
-    color: rgba(255, 255, 255, 1);
-    font-weight: 500;
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-top: 11px;
-    padding-bottom: 11px;
-    background-color: rgba(0, 0, 0, 0.6);
-    border-radius: .75rem;
-    height: 41px;
-    border: none;
-}
-.btn:hover{
-    background-color: black;
-    color: rgba(125, 237, 221, 1);
+.btn:hover {
+  background-color: black;
+  color: rgba(125, 237, 221, 1);
 }
