--- a/src/components/header.css
+++ b/src/components/header.css
@@ -16,6 +16,12 @@
     height: 90px;
   }
 }
+@media screen and (max-width: 768px) {
+  .logo {
+    width: 100px;
+    height: 80px;
+  }
+}
 .btn {
   font-size: 16px;
   color: rgba(255, 255, 255, 1);
